--- a/css.css
+++ b/css.css
@@ -62,7 +62,7 @@ text-decoration: none;
 
 a:hover {
 font-family: Arial, Helvetica, sans-serif;
-color:#528c29;
+color:#228B22;
 background-color: #c7c7c7;
 }
 
